--- a/index.html
+++ b/index.html
@@ -4,49 +4,175 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Citizen Feedback System</title>
-    <link rel="stylesheet" href="/styles.css">
+    <title>Drone Deployment Request</title>
+    <style>
+        /* General Body Styling */
+        body {
+            margin-block: 1rem;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #befabe;
+            /* Green and White for Nigerian theme */
+            color: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        /* Container Styling */
+        .form-container {
+            width: 90%;
+            max-width: 500px;
+            background-color: #006747;
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            border-radius: 15px;
+            padding-inline: 20px;
+            padding-block: 30px;
+        }
+
+        /* Heading Styling */
+        h1 {
+            text-align: center;
+            color: #fff;
+        }
+
+        /* Form Styling */
+        .request-form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        label {
+            font-size: 16px;
+        }
+
+        input,
+        textarea,
+        button {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background: rgba(255, 255, 255, 0.1);
+            color: #fff;
+            outline: none;
+        }
+
+        textarea {
+            resize: none;
+        }
+
+        input[type="file"] {
+            cursor: pointer;
+        }
+
+        /* Submit Button Styling */
+        button {
+            background-color:#D1D3D4;
+            color: black;
+            font-weight: bold;
+            text-transform: uppercase;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #B0B3B4;
+        }
+        .coat-of-arm{
+            height: auto;
+            width: 8rem;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
+
+    <div class="form-container">
+        <div>
+            <div style="display: flex; justify-content: center;">
+                <img src="/coat of arm.png" alt="Nigerian Coat of arm" class="coat-of-arm">
+            </div>
+        </div>
         <h1>Citizen Feedback and Reporting System</h1>
-        <form id="feedbackForm" class="feedbackForm">
-            <label>
-                <span>Name:</span>
-                <input type="text" id="name" placeholder="Enter your name" required>
-            </label>
+        <form id="requestForm" class="request-form">
+            <!-- Name Field -->
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required placeholder="Enter your Full Name">
 
-            <label>
-                <span>Email:</span>
-                <input type="email" id="email" placeholder="Enter your email" required>
-            </label>
+            <!-- Email Field -->
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required placeholder="Enter a valid email address">
 
-            <label>
-                <span>Category:</span>
-                <select id="category" required>
-                    <option value="Road Maintenance">Road Maintenance</option>
-                    <option value="Waste Management">Waste Management</option>
-                    <option value="Electricity Issues">Electricity Issues</option>
-                    <option value="Water Supply">Water Supply</option>
-                    <option value="Other">Other</option>
-                </select>
-            </label>
+              <!-- Phone numbers Field -->
+              <label for="email">Phone number:</label>
+              <input type="text" id="phone" name="phone" required placeholder="Enter a valid phone number">
 
+            <!-- Description Field -->
+            <label for="description">Description (max 250 characters):</label>
+            <textarea id="description" name="description" maxlength="250" required placeholder="Describe what happened, add any important observations"></textarea>
 
-            <label>
-                <span>Description:</span>
-                <textarea id="description" placeholder="Describe the issue" required></textarea>
-            </label>
+            <!-- Image Upload Field -->
+            <label for="image">Upload Media:</label>
+            <input type="file" id="image" name="image" accept="image/*">
 
-            <button type="submit">Submit Feedback</button>
+            <!-- Submit Button -->
+            <button type="submit">Submit</button>
         </form>
-        
-        <button id="submitButton">Submit Feedback w seasons</button>
-        <h2>Submitted Feedback</h2>
-        <ul id="feedbackList"></ul>
     </div>
+
     <script src="script.js"></script>
+    <!-- <script>
+        async function submitForm() {
+            const form = document.getElementById('requestForm');
+            const formData = new FormData(form);
+
+            // Get user's geolocation
+            const position = await new Promise((resolve, reject) => {
+                navigator.geolocation.getCurrentPosition(resolve, reject);
+            });
+
+            const latitude = position.coords.latitude;
+            const longitude = position.coords.longitude;
+
+            // Convert image to Base64
+            const imageFile = formData.get('image');
+            let imageURL = '';
+            if (imageFile) {
+                const reader = new FileReader();
+                reader.onload = () => {
+                    imageURL = reader.result;
+                };
+                reader.readAsDataURL(imageFile);
+                await new Promise((resolve) => (reader.onloadend = resolve));
+            }
+
+            // Data to send
+            const data = {
+                name: formData.get('name'),
+                email: formData.get('email'),
+                description: formData.get('description'),
+                imageURL,
+                latitude,
+                longitude
+            };
+
+            // Send data to Google Sheets via Apps Script
+            const response = await fetch('https://script.google.com/macros/s/AKfycbxaJHYffgC9eby0GZOYN0-_iwEQdfmNO0nyUmxOxg78luBDWcpN34iuu-dZ_sYf02gYiw/exec', {
+                method: 'POST',
+                body: JSON.stringify(data),
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            });
+
+            if (response.ok) {
+                alert('Request submitted successfully!');
+            } else {
+                alert('Failed to submit the request.');
+            }
+        }
+    </script> -->
 </body>
 
 </html>
