--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             color: #fff;
             outline: none;
         }
+        input::placeholder, textarea::placeholder{
+            color: rgb(240, 240, 230);
+        }
 
         textarea {
             resize: none;
