--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             padding: 10px;
             border: none;
             border-radius: 5px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgb(99, 98, 98);
             color: #fff;
             outline: none;
         }
         input::placeholder, textarea::placeholder{
-            color: rgb(240, 240, 230);
+            color: rgb(240, 240, 240) !important;
         }
 
         textarea {
