Can you believe i removed a slash

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="form-container">
         <div>
             <div style="display: flex; justify-content: center;">
-                <img src="/coat of arm.png" alt="Nigerian Coat of arm" class="coat-of-arm">
+                <img src="coat of arm.png" alt="Nigerian Coat of arm" class="coat-of-arm">
             </div>
         </div>
         <h1>Citizen Feedback and Reporting System</h1>
